--- a/src/SourceCode/View/fxml/ReturnView.fxml
+++ b/src/SourceCode/View/fxml/ReturnView.fxml
@@ -1,15 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.*?>
-<?import java.net.*?>
-<?import javafx.geometry.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.text.*?>
-<?import javafx.scene.control.*?>
-<?import java.lang.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.Cursor?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Region?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: gray;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="SourceCode.Controller.user.ReturnItemController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: gray;" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="SourceCode.Controller.user.ReturnItemController">
    <center>
       <VBox prefHeight="200.0" prefWidth="100.0" spacing="5.0" BorderPane.alignment="CENTER">
          <children>
@@ -31,7 +35,7 @@
             </TableView>
             <HBox>
                <children>
-                  <Button fx:id="btnBack" maxWidth="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#btnBackAction" prefHeight="27.0" prefWidth="125.0" style="-fx-background-color: #8CD0BB;" text="Back" textFill="WHITE">
+                  <Button fx:id="btnBack" maxWidth="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#btnBack" prefHeight="27.0" prefWidth="125.0" style="-fx-background-color: #8CD0BB;" text="Back" textFill="WHITE">
                      <font>
                         <Font name="Arial Black" size="13.0" />
                      </font>
@@ -40,7 +44,7 @@
                      </cursor></Button>
                   <Region prefHeight="27.0" prefWidth="112.0" />
                   <Region prefHeight="30.0" prefWidth="237.0" />
-                  <Button fx:id="btnSubmit" layoutX="485.0" layoutY="10.0" maxWidth="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#btnSubmitAction" prefHeight="27.0" prefWidth="125.0" style="-fx-background-color: #8CD0BB;" text="Submit" textFill="WHITE">
+                  <Button fx:id="btnSubmit" layoutX="485.0" layoutY="10.0" maxWidth="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#btnSubmit" prefHeight="27.0" prefWidth="125.0" style="-fx-background-color: #8CD0BB;" text="Submit" textFill="WHITE">
                      <font>
                         <Font name="Arial Black" size="13.0" />
                      </font>
