--- a/src/SourceCode/View/fxml/TakeItem.fxml
+++ b/src/SourceCode/View/fxml/TakeItem.fxml
@@ -1,12 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.effect.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
@@ -23,7 +16,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: gray;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="SourceCode.Controller.user.TakeItemController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: gray;" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="SourceCode.Controller.user.TakeItemController">
    <center>
       <VBox prefHeight="200.0" prefWidth="100.0" spacing="5.0" BorderPane.alignment="CENTER">
          <children>
@@ -57,7 +50,7 @@
             </TableView>
             <HBox>
                <children>
-                  <Button fx:id="btnBack" maxWidth="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#btnBackAction" prefHeight="27.0" prefWidth="125.0" style="-fx-background-color: #8CD0BB;" text="Back" textFill="WHITE">
+                  <Button fx:id="btnBack" maxWidth="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#btnBack" prefHeight="27.0" prefWidth="125.0" style="-fx-background-color: #8CD0BB;" text="Back" textFill="WHITE">
                      <font>
                         <Font name="Arial Black" size="13.0" />
                      </font>
@@ -65,7 +58,7 @@
                         <Cursor fx:constant="HAND" />
                      </cursor></Button>
                   <Region prefHeight="27.0" prefWidth="112.0" />
-                  <Button fx:id="btnDelete" layoutX="484.0" layoutY="10.0" maxWidth="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="27.0" prefWidth="125.0" style="-fx-background-color: #8CD0BB;" text="Delete" textFill="WHITE">
+                  <Button fx:id="btnDelete" layoutX="484.0" layoutY="10.0" maxWidth="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#btnDelete" prefHeight="27.0" prefWidth="125.0" style="-fx-background-color: #8CD0BB;" text="Delete" textFill="WHITE">
                      <font>
                         <Font name="Arial Black" size="13.0" />
                      </font>
@@ -74,7 +67,7 @@
                      </cursor>
                   </Button>
                   <Region prefHeight="27.0" prefWidth="112.0" />
-                  <Button fx:id="btnSubmit" layoutX="485.0" layoutY="10.0" maxWidth="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#btnSubmitAction" prefHeight="27.0" prefWidth="125.0" style="-fx-background-color: #8CD0BB;" text="Submit" textFill="WHITE">
+                  <Button fx:id="btnSubmit" layoutX="485.0" layoutY="10.0" maxWidth="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#btnSubmit" prefHeight="27.0" prefWidth="125.0" style="-fx-background-color: #8CD0BB;" text="Submit" textFill="WHITE">
                      <font>
                         <Font name="Arial Black" size="13.0" />
                      </font>
