--- a/src/SourceCode/View/fxml/SearchView.fxml
+++ b/src/SourceCode/View/fxml/SearchView.fxml
@@ -1,15 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
@@ -20,19 +15,21 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: gray;" stylesheets="@../CSS/searchCSS.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="SourceCode.Controller.user.SearchItemController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: gray;" stylesheets="@../CSS/searchCSS.css" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="SourceCode.Controller.user.SearchItemController">
    <center>
       <VBox prefHeight="200.0" prefWidth="100.0" spacing="5.0" BorderPane.alignment="CENTER">
          <children>
             <HBox>
                <children>
-                  <TextField fx:id="tfItemNumber" onAction="#checkItemBarcode" pickOnBounds="false" promptText="Item number.." stylesheets="@../CSS/searchCSS.css" />
                   <Region prefHeight="27.0" prefWidth="282.0" />
                </children>
             </HBox>
             <HBox>
                <children>
-                  <ComboBox fx:id="comboBox" maxHeight="-Infinity" minHeight="-Infinity" prefHeight="27.0" prefWidth="167.0" promptText="Category" />
+                  <Label prefHeight="27.0" prefWidth="86.0" text="Search by..." />
+                  <TextField fx:id="tfItemNumber" onAction="#checkItemBarcode" pickOnBounds="false" prefHeight="27.0" prefWidth="201.0" promptText="Item barcode/item number..." stylesheets="@../CSS/searchCSS.css" />
+                  <Label prefHeight="27.0" prefWidth="70.0" text="   or by..." />
+                  <ComboBox fx:id="comboBox" maxHeight="-Infinity" minHeight="-Infinity" prefHeight="27.0" prefWidth="180.0" promptText="Category" />
                </children>
             </HBox>
             <TableView fx:id="tableView" prefHeight="260.0" prefWidth="600.0">
@@ -58,14 +55,6 @@
                      </cursor></Button>
                   <Region prefHeight="27.0" prefWidth="112.0" />
                   <Region prefHeight="30.0" prefWidth="238.0" />
-                  <Button fx:id="btnSearch" layoutX="485.0" layoutY="10.0" maxWidth="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#btnSearch" prefHeight="27.0" prefWidth="125.0" style="-fx-background-color: #8CD0BB;" text="Search" textFill="WHITE">
-                     <font>
-                        <Font name="Arial Black" size="13.0" />
-                     </font>
-                     <cursor>
-                        <Cursor fx:constant="HAND" />
-                     </cursor>
-                  </Button>
                </children>
             </HBox>
          </children>
