--- a/src/SourceCode/View/fxml/SearchView.fxml
+++ b/src/SourceCode/View/fxml/SearchView.fxml
@@ -1,5 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.scene.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
@@ -15,7 +21,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: gray;" stylesheets="@../CSS/searchCSS.css" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="SourceCode.Controller.user.SearchItemController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: gray;" stylesheets="@../CSS/searchCSS.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="SourceCode.Controller.user.SearchItemController">
    <center>
       <VBox prefHeight="200.0" prefWidth="100.0" spacing="5.0" BorderPane.alignment="CENTER">
          <children>
@@ -26,9 +32,15 @@
             </HBox>
             <HBox>
                <children>
-                  <Label prefHeight="27.0" prefWidth="86.0" text="Search by..." />
-                  <TextField fx:id="tfItemNumber" onAction="#checkItemBarcode" pickOnBounds="false" prefHeight="27.0" prefWidth="201.0" promptText="Item barcode/item number..." stylesheets="@../CSS/searchCSS.css" />
-                  <Label prefHeight="27.0" prefWidth="70.0" text="   or by..." />
+                  <Label prefHeight="27.0" prefWidth="124.0" text="         Search by" textFill="WHITE">
+                     <font>
+                        <Font name="Arial Black" size="13.0" />
+                     </font></Label>
+                  <TextField fx:id="tfItemNumber" onAction="#checkItemBarcode" pickOnBounds="false" prefHeight="27.0" prefWidth="160.0" promptText="Item barcode/number.." stylesheets="@../CSS/searchCSS.css" />
+                  <Label prefHeight="27.0" prefWidth="70.0" text="    or by" textFill="WHITE">
+                     <font>
+                        <Font name="Arial Black" size="13.0" />
+                     </font></Label>
                   <ComboBox fx:id="comboBox" maxHeight="-Infinity" minHeight="-Infinity" prefHeight="27.0" prefWidth="180.0" promptText="Category" />
                </children>
             </HBox>
