--- a/src/SourceCode/View/fxml/CreateItem.fxml
+++ b/src/SourceCode/View/fxml/CreateItem.fxml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.scene.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
@@ -9,7 +14,7 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="SourceCode.Controller.admin.CreateItemController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="SourceCode.Controller.admin.CreateItemController">
    <center>
       <AnchorPane prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: grey;" BorderPane.alignment="CENTER">
          <children>
@@ -23,7 +28,7 @@
                   <Font name="Arial Black" size="13.0" />
                </font>
             </Label>
-            <Label layoutX="117.0" layoutY="202.0" style="-fx-text-fill: #8CD0BB;" text="Item name">
+            <Label layoutX="117.0" layoutY="202.0" style="-fx-text-fill: #8CD0BB;" text="Item name/address if key">
                <font>
                   <Font name="Arial Black" size="13.0" />
                </font>
@@ -40,7 +45,7 @@
             </Label>
             <TextField fx:id="tfItemBarcode" layoutX="117.0" layoutY="104.0" promptText="barcode.." />
             <TextField fx:id="tfItemNo" layoutX="117.0" layoutY="164.0" promptText="number.." />
-            <TextField fx:id="tfItemName" layoutX="117.0" layoutY="219.0" promptText="name.." />
+            <TextField fx:id="tfItemName" layoutX="117.0" layoutY="219.0" promptText="name/address.." />
             <Button fx:id="btnCancel" layoutX="117.0" layoutY="329.0" mnemonicParsing="false" onAction="#btnCancel" style="-fx-background-color: #8CD0BB;" text="Cancel" textFill="WHITE">
                <font>
                   <Font name="Arial Black" size="13.0" />
