--- a/src/SourceCode/View/fxml/SearchView.fxml
+++ b/src/SourceCode/View/fxml/SearchView.fxml
@@ -21,7 +21,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: gray;" stylesheets="@../CSS/searchCSS.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="SourceCode.Controller.user.SearchItemController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="415.0" prefWidth="770.0" style="-fx-background-color: gray;" stylesheets="@../CSS/searchCSS.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="SourceCode.Controller.user.SearchItemController">
    <center>
       <VBox prefHeight="200.0" prefWidth="100.0" spacing="5.0" BorderPane.alignment="CENTER">
          <children>
@@ -32,7 +32,7 @@
             </HBox>
             <HBox>
                <children>
-                  <Label prefHeight="27.0" prefWidth="124.0" text="         Search by" textFill="WHITE">
+                  <Label prefHeight="27.0" prefWidth="104.0" text="   Search by" textFill="WHITE">
                      <font>
                         <Font name="Arial Black" size="13.0" />
                      </font></Label>
@@ -51,7 +51,8 @@
                <columns>
                   <TableColumn fx:id="employeeNameColumn" prefWidth="75.0" text="Name" />
                   <TableColumn fx:id="telephoneNoColumn" prefWidth="75.0" text="Phone No." />
-                  <TableColumn fx:id="itemNameColumn" prefWidth="75.0" text="Item" />
+                  <TableColumn fx:id="itemCategoryColumn" prefWidth="75.0" text="Item category" />
+                  <TableColumn fx:id="itemNameColumn" prefWidth="75.0" text="Item reference" />
                   <TableColumn fx:id="placeColumn" prefWidth="75.0" text="Place" />
                   <TableColumn fx:id="timeTakenColumn" prefWidth="75.0" text="Time taken" />
                </columns>
@@ -75,13 +76,13 @@
    <top>
       <HBox BorderPane.alignment="CENTER">
          <children>
-            <Region prefHeight="54.0" prefWidth="204.0" />
+            <Region prefHeight="70.0" prefWidth="327.0" />
             <Label alignment="CENTER" prefHeight="54.0" prefWidth="233.0" style="-fx-text-fill: #8CD0BB;" text="Search" textAlignment="CENTER">
                <font>
                   <Font name="Arial Black" size="36.0" />
                </font>
             </Label>
-            <Region prefHeight="54.0" prefWidth="123.0" />
+            <Region prefHeight="70.0" prefWidth="289.0" />
             <ImageView fitHeight="40.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../../../Image/Rac3.png" />
