--- a/src/SourceCode/View/fxml/TakeItem.fxml
+++ b/src/SourceCode/View/fxml/TakeItem.fxml
@@ -1,5 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.scene.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.effect.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
@@ -16,7 +23,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: gray;" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="SourceCode.Controller.user.TakeItemController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="415.0" prefWidth="770.0" style="-fx-background-color: gray;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="SourceCode.Controller.user.TakeItemController">
    <center>
       <VBox prefHeight="200.0" prefWidth="100.0" spacing="5.0" BorderPane.alignment="CENTER">
          <children>
@@ -41,7 +48,8 @@
             <TableView fx:id="tableView" prefHeight="260.0" prefWidth="400.0">
               <columns>
                 <TableColumn fx:id="itemNumberColumn" minWidth="-Infinity" prefWidth="152.0" text="Item number" />
-                  <TableColumn fx:id="itemNameColumn" prefWidth="243.0" text="Item name" />
+                  <TableColumn fx:id="itemCategoryColumn" prefWidth="75.0" text="Category" />
+                  <TableColumn fx:id="itemNameColumn" prefWidth="243.0" text="Item reference" />
                   <TableColumn fx:id="placeColumn" prefWidth="75.0" text="Place" />
               </columns>
                <columnResizePolicy>
@@ -56,8 +64,9 @@
                      </font>
                      <cursor>
                         <Cursor fx:constant="HAND" />
-                     </cursor></Button>
-                  <Region prefHeight="27.0" prefWidth="112.0" />
+                     </cursor>
+                  </Button>
+                  <Region prefHeight="30.0" prefWidth="273.0" />
                   <Button fx:id="btnDelete" layoutX="484.0" layoutY="10.0" maxWidth="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#btnDelete" prefHeight="27.0" prefWidth="125.0" style="-fx-background-color: #8CD0BB;" text="Delete" textFill="WHITE">
                      <font>
                         <Font name="Arial Black" size="13.0" />
@@ -66,7 +75,7 @@
                         <Cursor fx:constant="HAND" />
                      </cursor>
                   </Button>
-                  <Region prefHeight="27.0" prefWidth="112.0" />
+                  <Region prefHeight="30.0" prefWidth="280.0" />
                   <Button fx:id="btnSubmit" layoutX="485.0" layoutY="10.0" maxWidth="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#btnSubmit" prefHeight="27.0" prefWidth="125.0" style="-fx-background-color: #8CD0BB;" text="Submit" textFill="WHITE">
                      <font>
                         <Font name="Arial Black" size="13.0" />
@@ -83,13 +92,13 @@
    <top>
       <HBox BorderPane.alignment="CENTER">
          <children>
-            <Region prefHeight="54.0" prefWidth="220.0" />
+            <Region prefHeight="70.0" prefWidth="327.0" />
             <Label prefHeight="54.0" prefWidth="261.0" style="-fx-text-fill: #8CD0BB;" text="Take Item" textAlignment="CENTER">
                <font>
                   <Font name="Arial Black" size="36.0" />
                </font>
             </Label>
-            <Region prefHeight="54.0" prefWidth="123.0" />
+            <Region prefHeight="70.0" prefWidth="246.0" />
             <ImageView fitHeight="40.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../../../Image/Rac3.png" />
