--- a/src/SourceCode/View/fxml/AdminView.fxml
+++ b/src/SourceCode/View/fxml/AdminView.fxml
@@ -17,11 +17,21 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane fx:id="adminBorder" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="450.0" prefWidth="786.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="SourceCode.Controller.admin.AdminController">
+<BorderPane fx:id="adminBorder" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="786.0" style="-fx-background-color: gray;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="SourceCode.Controller.admin.AdminController">
    <top>
       <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="465.0" prefWidth="787.0" style="-fx-background-color: grey;" BorderPane.alignment="CENTER">
          <children>
-            <TabPane layoutX="4.0" layoutY="2.0" prefHeight="348.0" prefWidth="783.0" style="-fx-background-color: white;" tabClosingPolicy="UNAVAILABLE">
+            <Label alignment="CENTER" layoutX="59.0" prefHeight="54.0" prefWidth="667.0" style="-fx-text-fill: #8CD0BB; -fx-background-color: gray;" text="ADMINISTRATOR">
+               <font>
+                  <Font name="Arial Black" size="36.0" />
+               </font>
+            </Label>
+            <ImageView fitHeight="40.0" fitWidth="200.0" layoutX="740.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../../Image/Rac3.png" />
+               </image>
+            </ImageView>
+            <TabPane layoutX="2.0" layoutY="62.0" prefHeight="348.0" prefWidth="783.0" style="-fx-background-color: white;" tabClosingPolicy="UNAVAILABLE">
               <tabs>
                 <Tab fx:id="employeeTab" text="Employees">
                      <content>
@@ -84,7 +94,7 @@
                      </content></Tab>
               </tabs>
             </TabPane>
-            <Button fx:id="btnCreateEmployee" layoutX="4.0" layoutY="364.0" mnemonicParsing="false" onAction="#btnCreateEmployee" style="-fx-background-color: #8CD0BB;" text="Create Employee" textFill="WHITE">
+            <Button fx:id="btnCreateEmployee" layoutX="4.0" layoutY="424.0" mnemonicParsing="false" onAction="#btnCreateEmployee" style="-fx-background-color: #8CD0BB;" text="Create Employee" textFill="WHITE">
                <font>
                   <Font name="Arial Black" size="13.0" />
                </font>
@@ -92,7 +102,7 @@
                   <Cursor fx:constant="HAND" />
                </cursor>
             </Button>
-            <Button fx:id="btnCreateItem" layoutX="4.0" layoutY="405.0" mnemonicParsing="false" onAction="#btnCreateItem" prefHeight="30.0" prefWidth="139.0" style="-fx-background-color: #8CD0BB;" text="Create Item" textFill="WHITE">
+            <Button fx:id="btnCreateItem" layoutX="4.0" layoutY="465.0" mnemonicParsing="false" onAction="#btnCreateItem" prefHeight="30.0" prefWidth="139.0" style="-fx-background-color: #8CD0BB;" text="Create Item" textFill="WHITE">
                <font>
                   <Font name="Arial Black" size="13.0" />
                </font>
@@ -100,7 +110,7 @@
                   <Cursor fx:constant="HAND" />
                </cursor>
             </Button>
-            <Button fx:id="btnUpdate" layoutX="172.0" layoutY="364.0" mnemonicParsing="false" onAction="#btnUpdateAction" prefHeight="30.0" prefWidth="73.0" style="-fx-background-color: #8CD0BB;" text="Update" textFill="WHITE">
+            <Button fx:id="btnUpdate" layoutX="172.0" layoutY="424.0" mnemonicParsing="false" onAction="#btnUpdateAction" prefHeight="30.0" prefWidth="73.0" style="-fx-background-color: #8CD0BB;" text="Update" textFill="WHITE">
                <font>
                   <Font name="Arial Black" size="13.0" />
                </font>
@@ -108,7 +118,7 @@
                   <Cursor fx:constant="HAND" />
                </cursor>
             </Button>
-            <Button fx:id="btnDelete" layoutX="172.0" layoutY="405.0" mnemonicParsing="false" onAction="#btnDeleteAction" prefHeight="30.0" prefWidth="73.0" style="-fx-background-color: #8CD0BB;" text="Delete" textFill="WHITE">
+            <Button fx:id="btnDelete" layoutX="172.0" layoutY="465.0" mnemonicParsing="false" onAction="#btnDeleteAction" prefHeight="30.0" prefWidth="73.0" style="-fx-background-color: #8CD0BB;" text="Delete" textFill="WHITE">
                <font>
                   <Font name="Arial Black" size="13.0" />
                </font>
@@ -116,7 +126,7 @@
                   <Cursor fx:constant="HAND" />
                </cursor>
             </Button>
-            <Button fx:id="btnLogOut" layoutX="701.0" layoutY="405.0" mnemonicParsing="false" onAction="#btnLogOut" style="-fx-background-color: #8CD0BB;" text="Log out" textFill="WHITE">
+            <Button fx:id="btnLogOut" layoutX="701.0" layoutY="465.0" mnemonicParsing="false" onAction="#btnLogOut" style="-fx-background-color: #8CD0BB;" text="Log out" textFill="WHITE">
                <font>
                   <Font name="Arial Black" size="13.0" />
                </font>
@@ -124,8 +134,8 @@
                   <Cursor fx:constant="HAND" />
                </cursor>
             </Button>
-            <TextField fx:id="tfSearch" layoutX="312.0" layoutY="366.0" onAction="#searchTfAction" promptText="               Search" />
-            <Button fx:id="btnRefresh" layoutX="701.0" layoutY="364.0" mnemonicParsing="false" onAction="#btnRefreshAction" prefHeight="30.0" prefWidth="73.0" style="-fx-background-color: #8CD0BB;" text="Refresh" textFill="WHITE">
+            <TextField fx:id="tfSearch" layoutX="312.0" layoutY="426.0" onAction="#searchTfAction" promptText="               Search" />
+            <Button fx:id="btnRefresh" layoutX="701.0" layoutY="424.0" mnemonicParsing="false" onAction="#btnRefreshAction" prefHeight="30.0" prefWidth="73.0" style="-fx-background-color: #8CD0BB;" text="Refresh" textFill="WHITE">
                <cursor>
                   <Cursor fx:constant="HAND" />
                </cursor>
